--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
-       android:layout_height="400dp"
+       android:layout_height="350dp"
        />
     
     <TextView
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Tespit Edilen Yazı"
+        android:text="Yazıyı Oku"
         android:textAllCaps="false"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
